Closed Bug 1268440 Opened 10 years ago Closed 10 years ago

crash in mozilla::layers::DXGIYCbCrTextureHostD3D11::SetCompositor

Categories

(Core :: Graphics: Layers, defect)

47 Branch
x86
Windows NT
defect
Not set
critical

Tracking

()

RESOLVED FIXED
Tracking Status
firefox47 + fixed
firefox48 --- unaffected

People

(Reporter: philipp, Assigned: nical)

Details

(Keywords: crash, regression, topcrash-win, Whiteboard: [gfx-noted])

Crash Data

Attachments

(1 file)

[Tracking Requested - why for this release]: maybe a regression, signature is jumping up in 47.0b1 data This bug was filed from the Socorro interface and is report bp-c43ead15-5002-40c7-974f-ff8fa2160428. ============================================================= Crashing Thread (34) Frame Module Signature Source 0 xul.dll mozilla::layers::DXGIYCbCrTextureHostD3D11::SetCompositor(mozilla::layers::Compositor*) gfx/layers/d3d11/TextureD3D11.cpp 1 xul.dll mozilla::layers::CompositableHost::Attach(mozilla::layers::Layer*, mozilla::layers::Compositor*, unsigned int) gfx/layers/composite/CompositableHost.h 2 xul.dll mozilla::layers::ImageHost::Attach(mozilla::layers::Layer*, mozilla::layers::Compositor*, unsigned int) gfx/layers/composite/ImageHost.cpp 3 xul.dll mozilla::layers::LayerTransactionParent::Attach(mozilla::layers::ShadowLayerParent*, mozilla::layers::CompositableHost*, bool) gfx/layers/ipc/LayerTransactionParent.cpp 4 xul.dll mozilla::layers::LayerTransactionParent::RecvUpdate(nsTArray<mozilla::layers::Edit>&&, nsTArray<mozilla::layers::OpDestroy>&&, unsigned __int64 const&, mozilla::layers::TargetConfig const&, nsTArray<mozilla::layers::PluginWindowData>&&, bool const&, bool const&, unsigned int const&, bool const&, mozilla::TimeStamp const&, int const&, nsTArray<mozilla::layers::EditReply>*) gfx/layers/ipc/LayerTransactionParent.cpp 5 xul.dll mozilla::layers::PLayerTransactionParent::OnMessageReceived(IPC::Message const&, IPC::Message*&) obj-firefox/ipc/ipdl/PLayerTransactionParent.cpp 6 xul.dll mozilla::layers::PCompositorParent::OnMessageReceived(IPC::Message const&, IPC::Message*&) obj-firefox/ipc/ipdl/PCompositorParent.cpp 7 xul.dll mozilla::ipc::MessageChannel::DispatchSyncMessage(IPC::Message const&, IPC::Message*&) ipc/glue/MessageChannel.cpp 8 xul.dll mozilla::ipc::MessageChannel::DispatchMessageW(IPC::Message const&) ipc/glue/MessageChannel.cpp 9 xul.dll mozilla::ipc::MessageChannel::OnMaybeDequeueOne() ipc/glue/MessageChannel.cpp there have been (literally) a handful of those crashes since 43.0 but in early 47.0b1 data the signature seems to be on the rise.
Assignee: nobody → edwin
Whiteboard: [gfx-noted]
This appears to have been fixed in bug 1245813. Nical, would it be possible to uplift 2e636d5fcda8 to 47?
oops. see above comment.
Flags: needinfo?(nical.bugzilla)
(In reply to Edwin Flores [:eflores] [:edwin] from comment #1) > This appears to have been fixed in bug 1245813. Nical, would it be possible > to uplift 2e636d5fcda8 to 47? Yeah, I'll rebase the patch.
Assignee: edwin → nical.bugzilla
Flags: needinfo?(nical.bugzilla)
Attached patch FixSplinter Review
Turns out the relevant patches were already uplifted in beta 47, but I made a mistake while rebasing one of the patches on top of 47 in bug 1258768, and introduced this crash. This patch fixes the rebasing mistake so that DXGIYCbCrTextureHostD3D11::SetCompositor behaves the same way it should, which is equivalent to what it does in nightly and aurora. Technically this change has already been reviewed (I just mistakenly uplifted something different from the reviewed code due to the rebasing mistake), but I suppose it will be less confusing if this patch flagged r+ here since it is on a different bug. Likewise, it has already been approved for beta. Approval Request Comment [Feature/regressing bug #]: [User impact if declined]: Crashes. [Describe test coverage new/current, TreeHerder]: [Risks and why]: none, this code is already on nightly and aurora, and should have been on beta if I hadn't messed up when uplifting bug 1258768. [String/UUID change made/needed]: None.
Attachment #8747698 - Flags: review?(edwin)
Attachment #8747698 - Flags: approval-mozilla-beta?
Comment on attachment 8747698 [details] [diff] [review] Fix Fix crash (rebased beta patch issue), Beta47+
Attachment #8747698 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Although this is fixed in code I don't believe it's been shipped yet in a Beta build. Currently this is #15 in Beta and rising so I'm tagging it as a topcrash. We'll want to keep an eye on it to make sure volume starts dropping once the next Beta is out.
Keywords: topcrash-win
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: