Bug 1268440 - Null-check in DXGIYCbCrTextureHostD3D11::SetCompositor. a=ritu

MozReview-Commit-ID: DvfGEoi0wJd